# ubus_demo

./: Makefile.am  configure.ac
src/: event_client.c  event_server.c  invoke_server.c  ubus_invoke.h
